crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__record_wire_order_access_update_and_accessor_execute.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 234
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype alias person = { age : int, active : bool }\nread : person -> int\nread = .age\noriginal : person\noriginal = { active = True, age = 1 }\nmain : int\nmain = read { original | age = 42 }\n"
---
--- core
let read#2 : { _0 : int, _1 : bool } -> int = \record#6 : { _0 : int, _1 : bool } -> let projection#10 : int = field@0/2 record#6 in
projection#10 in
let fromInt#5 : int -> int = \value#8 : int -> value#8 in
let fromBool#7 : bool -> bool = \value#9 : bool -> value#9 in
let original#3 : { _0 : int, _1 : bool } = constr 0 (fromInt#5 1) (fromBool#7 true) in
let base#4 : { _0 : int, _1 : bool } = original#3 in
let evaluated#12 : int = fromInt#5 42 in
let projection#11 : bool = field@1/2 base#4 in
let main#1 : int = read#2 (constr 0 evaluated#12 projection#11) in
main#1
--- uplc
(program 1.1.0
  [(lam read_2
    [(lam fromInt_5
      [(lam fromBool_7
        [(lam original_3
          [(lam base_4
            [(lam evaluated_12
              [(lam projection_11
                [(lam main_1 main_1) [read_2 (constr 0 evaluated_12 projection_11)]])
                (case base_4 (lam generated_13 (lam generated_14 generated_14)))])
              [fromInt_5 (con integer 42)]])
            original_3])
          (constr 0 [fromInt_5 (con integer 1)] [fromBool_7 (con bool True)])])
        (lam value_9 value_9)])
      (lam value_8 value_8)])
    (lam record_6
      [(lam projection_10 projection_10)
        (case record_6 (lam generated_15 (lam generated_16 generated_15)))])])
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 832100, memory: 5300
