crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__reverse_big_fields_reuse_only_available_tails.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 1479
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nselect : Record -> int\nselect r = Builtin.addInteger (Builtin.unIData r.d)\n    (Builtin.addInteger (Builtin.unIData r.b) (Builtin.unIData r.d))\nmain = select { a = 1, b = 2, c = 3, d = 4 }\n"
---
--- unoptimized Core
let select#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> int = \r#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let projection#13 : list Data = unListData r#4 in
let projection#14 : list Data = dropList 3 projection#13 in
case@List projection#14 of
  Cons head#5 tail#6 -> let evaluated#15 : int = unIData head#5 in
  case@List projection#13 of
    Cons head#7 tail#8 -> case@List tail#8 of
      Cons head#9 tail#10 -> addInteger evaluated#15 (addInteger (unIData head#9) (unIData head#5)) in
let fromInt#3 : int -> Int = iData in
let main#1 : int = select#2 (listData (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (mkCons (fromInt#3 4) (con (list data) [])))))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam select_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [select_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 4)]] (con (list data) [])]]]]]]])
      (builtin iData)])
    (lam r_4
      [(lam projection_13
        [(lam projection_14
          (case
            projection_14
            (lam head_5
              (lam tail_6
                [(lam evaluated_15
                  (case
                    projection_13
                    (lam head_7
                      (lam tail_8
                        (case
                          tail_8
                          (lam head_9
                            (lam tail_10
                              [[(builtin addInteger) evaluated_15]
                                [[(builtin addInteger) [(builtin unIData) head_9]] [(builtin unIData) head_5]]]))
                          (error))))
                    (error)))
                  [(builtin unIData) head_5]]))
            (error)))
          [[(force (builtin dropList)) (con integer 3)] projection_13]])
        [(builtin unListData) r_4]])])
--- optimized Core
let fromInt#25 : int -> Int = iData in
let anf#30 : Int = fromInt#25 1 in
let anf#31 : Int = fromInt#25 2 in
let anf#32 : Int = fromInt#25 3 in
let anf#33 : Int = fromInt#25 4 in
let anf#34 : list Data = mkCons anf#33 (con (list data) []) in
let anf#35 : list Data = mkCons anf#32 anf#34 in
let anf#36 : list Data = mkCons anf#31 anf#35 in
let anf#37 : list Data = mkCons anf#30 anf#36 in
let anf#38 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = listData anf#37 in
let projection#12 : list Data = unListData anf#38 in
let projection#16 : list Data = dropList 3 projection#12 in
case@List projection#16 of
  Cons head#17 tail#18 -> let evaluated#19 : int = unIData head#17 in
  case@List projection#12 of
    Cons head#20 tail#21 -> case@List tail#21 of
      Cons head#22 tail#23 -> let anf#27 : int = unIData head#22 in
      let anf#28 : int = unIData head#17 in
      let anf#29 : int = addInteger anf#27 anf#28 in
      addInteger evaluated#19 anf#29
--- optimized UPLC
(program 1.1.0
  [(lam builtin_45
    [(lam builtin_46
      [(lam fromInt_1
        [(lam anf_2
          [(lam anf_3
            [(lam anf_4
              [(lam anf_5
                [(lam anf_6
                  [(lam anf_7
                    [(lam anf_8
                      [(lam anf_9
                        [(lam anf_10
                          [(lam projection_11
                            [(lam projection_13
                              (case
                                projection_13
                                (lam head_14
                                  (lam tail_15
                                    [(lam evaluated_24
                                      (case
                                        projection_11
                                        (lam head_26
                                          (lam tail_39
                                            (case
                                              tail_39
                                              (lam head_40
                                                (lam tail_41
                                                  [(lam anf_42
                                                    [(lam anf_43
                                                      [(lam anf_44 [[(builtin addInteger) evaluated_24] anf_44])
                                                        [[(builtin addInteger) anf_42] anf_43]])
                                                      [(builtin unIData) head_14]])
                                                    [(builtin unIData) head_40]]))
                                              (error))))
                                        (error)))
                                      [(builtin unIData) head_14]]))
                                (error)))
                              [[builtin_45 (con integer 3)] projection_11]])
                            [(builtin unListData) anf_10]])
                          [(builtin listData) anf_9]])
                        [[builtin_46 anf_2] anf_8]])
                      [[builtin_46 anf_3] anf_7]])
                    [[builtin_46 anf_4] anf_6]])
                  [[builtin_46 anf_5] (con (list data) [])]])
                [fromInt_1 (con integer 4)]])
              [fromInt_1 (con integer 3)]])
            [fromInt_1 (con integer 2)]])
          [fromInt_1 (con integer 1)]])
        (builtin iData)])
      (force (builtin mkCons))])
    (force (builtin dropList))])
--- result
(con integer 10)
--- logs
[]
--- budget
cpu: 2157759, memory: 9024
