crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__shared_identity_binders_erase_the_first_instance_type.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 971
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nident x = x\nmain : (int, bytes)\nmain = (ident 42, ident #\"aa\")\n"
---
--- unoptimized Core
let ident#2 : 'erased -> 'erased = \x#5 : 'erased -> x#5 in
let fromInt#3 : int -> int = \value#6 : int -> value#6 in
let fromBytes#4 : bytes -> bytes = \value#7 : bytes -> value#7 in
let main#1 : (int, bytes) = constr 0 (ident#2 (fromInt#3 42)) (ident#2 (fromBytes#4 (con bytestring #aa))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam ident_2
    [(lam fromInt_3
      [(lam fromBytes_4
        [(lam main_1 main_1)
          (constr 0
            [ident_2 [fromInt_3 (con integer 42)]]
            [ident_2 [fromBytes_4 (con bytestring #aa)]])])
        (lam value_7 value_7)])
      (lam value_6 value_6)])
    (lam x_5 x_5)])
--- optimized Core
constr 0 42 (con bytestring #aa)
--- optimized UPLC
(program 1.1.0 (constr 0 (con integer 42) (con bytestring #aa)))
