crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_identity_accepts_a_function_and_overapplication.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nidentity value = value\nmain : int\nmain = identity Builtin.addInteger 20 22\n"
---
--- unoptimized Core
let identity#2 : 'erased -> 'erased = \value#4 : 'erased -> value#4 in
let fromInt#3 : int -> int = \value#5 : int -> value#5 in
let main#1 : int = identity#2 addInteger (fromInt#3 20) (fromInt#3 22) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam identity_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [[[identity_2 (builtin addInteger)] [fromInt_3 (con integer 20)]]
          [fromInt_3 (con integer 22)]]])
      (lam value_5 value_5)])
    (lam value_4 value_4)])
--- optimized Core
let anf#13 : int -> int = addInteger 20 in
anf#13 22
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [anf_1 (con integer 22)]) [(builtin addInteger) (con integer 20)]])
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 469308, memory: 2402
