crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_identity_and_strict_local_capture.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nidentity x = x\nmain : unit\nmain =\n    let\n        captured = ()\n        helper x = identity captured\n    in\n    helper ()\n"
---
--- unoptimized Core
let fromUnit#3 : unit -> unit = \value#7 : unit -> value#7 in
let identity#5 : 'erased -> 'erased = \x#8 : 'erased -> x#8 in
let captured#6 : 'erased = fromUnit#3 () in
let helper#2 : 'erased -> 'erased = \x#4 : 'erased -> identity#5 captured#6 in
let main#1 : unit = helper#2 (fromUnit#3 ()) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromUnit_3
    [(lam identity_5
      [(lam captured_6
        [(lam helper_2 [(lam main_1 main_1) [helper_2 [fromUnit_3 (con unit ())]]])
          (lam x_4 [identity_5 captured_6])])
        [fromUnit_3 (con unit ())]])
      (lam x_8 x_8)])
    (lam value_7 value_7)])
--- optimized Core
()
--- optimized UPLC
(program 1.1.0 (con unit ()))
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 448100, memory: 2900
