crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_lazy_boolean_branch.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 1238
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : int\nmain = if True then 42 else fail\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#4 : bool -> value#4 in
let fromInt#3 : int -> int = \value#5 : int -> value#5 in
let main#1 : int = case@Bool fromBool#2 true of
  True -> fromInt#3 42
  False -> error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        (case [fromBool_2 (con bool True)] (error) [fromInt_3 (con integer 42)])])
      (lam value_5 value_5)])
    (lam value_4 value_4)])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 288100, memory: 1900
